fix scrollbar css - use min-width instead of width

--- a/swaync/.config/swaync/style.css
+++ b/swaync/.config/swaync/style.css
@@ -282,7 +282,7 @@
 /* Scrollbar */
 scrollbar {
   background: transparent;
-  width: 8px;
+  min-width: 8px;
 }
 
 scrollbar trough {
